UtahLiveDataTest/src/objects/FundingOpportunityBudgetPeriod__c.object
<CustomObject>
    <description>[Business]  Funding Opportunity Budget Period</description>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipName>Funding_Opportunity_Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityProjectArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity Project Area</label>
        <referenceTo>AnnouncementServiceArea__c</referenceTo>
        <relationshipName>Funding_Opportunity_Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>Funding_Opportunity_Budget_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Funding Opportunity Budget Period (Obsol</label>
    <nameField>
        <displayFormat>FOBP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opportunity Budget Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>